blog-django-py-app/depoyment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: blog-django-py
    app.kubernetes.io/component: blog-django-py
    app.kubernetes.io/instance: blog-django-py
    app.kubernetes.io/part-of: blog-django-py-app
  name: blog-django-py
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: blog-django-py
    deploymentconfig: blog-django-py
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: blog-django-py
        deploymentconfig: blog-django-py
    spec:
      containers:
      - image: ' '
        imagePullPolicy: Always
        name: blog-django-py
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - blog-django-py
      from:
        kind: ImageStreamTag
        name: blog-django-py:latest
    type: ImageChange
  - type: ConfigChange
