blog-django-py-app/servcice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog-django-py
    app.kubernetes.io/component: blog-django-py
    app.kubernetes.io/instance: blog-django-py
    app.kubernetes.io/part-of: blog-django-py-app
  name: blog-django-py
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: blog-django-py
    deploymentconfig: blog-django-py
  sessionAffinity: None
  type: ClusterIP
