blog-django-py-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: blog-django-py
    app.kubernetes.io/component: blog-django-py
    app.kubernetes.io/instance: blog-django-py
    app.kubernetes.io/part-of: blog-django-py-app
  name: blog-django-py
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: blog-django-py
    weight: 100
  wildcardPolicy: None
